View3ds 0.055 - January 2011.
1. SSE optimizations (file BUMP_TEX.INC).
2. Compiles correctly in newest FASM.
-----------------------------------------------------------------------------------

View3ds 0.054 - December 2009 (Updated January 2010).
1. Skinned window by Leency.
2. Optimizations.
3. Re map texture, bumps option - allow spherical mapping around each axle (X,Y,Z).
4. Problem with too small memory to generate object fixed. (Problem ocurred with
   house.3ds object and others objects contains less than 1000 faces and points).
-----------------------------------------------------------------------------------

View3ds 0.053 - (?) 2009
1. Optimizations.
-----------------------------------------------------------------------------------

View3ds 0.052 - November 2007.
1. Memory for file is allocated dynamically.
2. Optimizations.
Note: compiling correct only for KolibriOS.
-----------------------------------------------------------------------------------

View3ds 0.051 - October 2007.
1. More smooth texture mapping in tex and txgr shading model and others based on
   tex3.inc, tex_cat.inc shading models.
2. Predefined three, I hope, nice lights.
-----------------------------------------------------------------------------------

View3ds 0.05 - (?) 2007
1. New shading model: cubic environment mapping with 1.5 kb light buffer.
2. Bumps optionally according to texture. ( It gives so called texture with
   shifts in bumps + texture shading model. )
3. Bumps depth button.
-----------------------------------------------------------------------------------

View3ds 0.04 - March 2007.
1. New shading model: bump + texture.  Only version with z coordinate
   interpolation.
2. SSE optimizations ( files: two_tex.inc and bump_tex.inc )
-----------------------------------------------------------------------------------

View3ds 0.03 - March 2007.
1. Two shading models: smooth + texture, spherical environment mapping + texture.